--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,8 @@ contourpy==1.3.2
 cramjam==2.10.0
 cryptography==43.0.3
 cuda-python==12.6.2.post1
+cudf-cu12 @ https://pypi.nvidia.com/cudf-cu12/cudf_cu12-25.2.1-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
+cudf-polars-cu12==25.2.2
 cufflinks==0.17.3
 cuml-cu12==25.2.1
 cupy-cuda12x==13.3.0
@@ -159,6 +161,7 @@ google-cloud-resource-manager==1.14.2
 google-cloud-spanner==3.54.0
 google-cloud-storage==2.19.0
 google-cloud-translate==3.20.2
+google-colab @ file:///colabtools/dist/google_colab-1.0.0.tar.gz
 google-crc32c==1.7.1
 google-genai==1.13.0
 google-generativeai==0.8.5
@@ -274,8 +277,7 @@ libraft-cu12==25.2.0
 librosa==0.11.0
 libucx-cu12==1.18.1
 libucxx-cu12==0.42.0
-lightgbm
-linux_x86_64.whl
+lightgbm @ file:///tmp/lightgbm/LightGBM/dist/lightgbm-4.5.0-py3-none-linux_x86_64.whl
 linkify-it-py==2.0.3
 llvmlite==0.43.0
 locket==1.0.0
