--- a/requirements.txt
+++ b/requirements.txt
@@ -552,7 +552,7 @@ tokenizers==0.21.1
 toml==0.10.2
 toolz==0.12.1
 torch
-torchaudio @ https://download.pytorch.org/whl/cu124/torchaudio-2.6.0%2Bcu124-cp311-cp311-linux_x86_64.whl
+torchaudio
 torchsummary==1.5.1
 torchvision @ https://download.pytorch.org/whl/cu124/torchvision-0.21.0%2Bcu124-cp311-cp311-linux_x86_64.whl
 tornado==6.4.2
